--- a/app.json
+++ b/app.json
@@ -1,4 +1,12 @@
 {
+    "addons": [
+        {
+            "plan": "heroku-postgresql",
+            "options": {
+              "version": "9.6"
+            }
+        }
+    ],
     "env": {
         "ADMIN_USER": {
             "description": "管理者ユーザID",
