--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ composer.phar
 /app/template/*
 !/app/template/admin
 !/app/template/default
-/html/plugin/*
+#/html/plugin/*
 !/html/plugin/.gitkeep
 /html/install/temp/*
 #/html/upload/save_image/*
